# visual_place_recognition

./: .gitignore  CMakeLists.txt  README.md
datasets/: autox.py  mapillary.py
doc/: google_doc.txt
docker/: Dockerfile  Makefile
docker/scripts/: dev_into.sh  dev_start.sh
gloabl_features/netvlad/: extract_kapture.py  netvlad.py
gloabl_features/seqslam/: extract_kapture.py  seqslam.py
image_retrieval/netvlad/: demo.ipynb  main.py  netvlad.py
scripts/: compute_feature_matches.py  compute_image_pairs.py  compute_image_pairs.sh  kapture_import_autox.py  visualize_feature_matches.py  visualize_image_pairs.py
scripts/utils/: matching.py  pairsfile.py
sfm/: main.py  pangolin.py  visualization.py
src/: ORBextractor.cc  ORBextractor.h  bowLocalizer.cc  bowLocalizer.h  bowMapper.cc  bowMapper.h  featureMatcher.cc  featureMatcher.h  frame.cc  frame.h  io.cc  io.h  localizer.h  main.cc  mapper.h  query.cc  test_Config.cc  test_cvMat_proto.cc  test_io.cc  test_proto_read.cc  test_proto_write.cc  test_vlad.cc  train_voc.cc  utils.h  vladMapper.cc  vladMapper.h
src/msg/: addressbook.pb.cc  addressbook.pb.h  addressbook.proto  cvMat.pb.cc  cvMat.pb.h  cvMat.proto  frame.pb.cc  frame.pb.h  frame.proto  frame_pb2.py
src/tracker/: tracking.cc  tracking.h
src/vlad/: Vocabulary.cc  Vocabulary.h
src/xray/: offline_read_xray.cc
visual_place_recognition/: CMakeLists.txt
visual_place_recognition/common/: CMakeLists.txt  convert.h  converter.cc  converter.h  dump.cc  dump.h  frame.h  preprocessing.cc  preprocessing.h
visual_place_recognition/common/proto/: CMakeLists.txt  frame.proto  gnss_pose.proto  image.proto  map.proto
visual_place_recognition/seqslam_localization/: CMakeLists.txt  localization_main.cc  main.cc  mapping_main.cc  seqslam_config.h  seqslam_localization.cc  seqslam_localization.h
